src/test/deca/extension/context/valid/cast_of_array.deca
// Description:
// 	  Cast of int array to float array
// Resultats:
// 	  ok
// Historique:
// 	  cree le /01/2023

{
    float[2][2] tab = {{1.0, 1.0}, {1, 2.0}};
    float[2] tab1 = {2.0, 1};
    float[2] tab2 = tab[0];
    float[3] tab3 = tab[1];
    int[] tab4 = {4, 5, 6, 7};
    float[][] tab5 = {tab4};
    float[3][2] tab6 = {{1, 1}, {1.0, 2.0}, {7.0, 4.0}};
}